[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/temp/gold_ore.png" type="Texture" id=1]
[ext_resource path="res://scenes/past/GoldOre.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 5 )

[node name="GoldOre" type="Area2D"]
visible = false
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 5 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_GoldOre_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_GoldOre_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
